# phonic-python

./: .fernignore  .flake8  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  pyproject.toml  reference.md  sts-stress-test.py  sts.py  twilio.py
.fern/: metadata.json
.github/workflows/: ci.yml  integration.yml  lint-and-typecheck.yml  publish.yml  release-dispatch.yml
examples/: agents_with_tool_use.py  simple_twilio_example.py
phonic/: __init__.py  _base.py  audio_interface.py  client.py  twilio_interface.py
src/phonic/: __init__.py  client.py  environment.py  raw_client.py  version.py
src/phonic/admin/: client.py  raw_client.py
src/phonic/agents/: __init__.py  client.py  raw_client.py
src/phonic/api_keys/: __init__.py  client.py  raw_client.py
src/phonic/auth/: __init__.py  client.py  raw_client.py
src/phonic/conversation_items/: client.py  raw_client.py
src/phonic/conversations/: __init__.py  client.py  raw_client.py  reconnectable_socket_client.py  socket_client.py  websocket_connect.py
src/phonic/core/: client_wrapper.py
src/phonic/errors/: __init__.py  service_unavailable_error.py  too_many_requests_error.py  unprocessable_entity_error.py
src/phonic/extraction_schemas/: __init__.py  client.py  raw_client.py
src/phonic/requests/: agent.py  (+87 more)
templates/: twilio.xml
tests/custom/: test_reconnectable_socket.py
tests/integration/: conftest.py  test_agents.py  test_conversations.py  test_projects.py  test_tools.py  test_websocket.py  test_workspace.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+267 files in other folders)
